src/test/ui/const-generics/const_evaluatable_checked/feature-gate-const_evaluatable_checked.min.stderr
error: generic parameters must not be used inside const evaluations
  --> $DIR/feature-gate-const_evaluatable_checked.rs:6:33
   |
LL | type Arr<const N: usize> = [u8; N - 1];
   |                                 ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments `N`

error: aborting due to previous error

